# Ebanes

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  README.md
resources/shaders/: fragment.txt  fragment_sprite.txt  vertex.txt  vertex_sprite.txt
src/: main.cpp
src/Renderer/: ShaderProgram.cpp
src/renderer/: shader_program.cpp  shader_program.hpp  sprite.cpp  sprite.hpp  texture_2D.cpp  texture_2D.hpp
src/resources/: resource_manager.cpp  resource_manager.hpp
